--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@hapi/boom": "^9.1.0",
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
+    "db": "^3.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rescue": "^1.1.26",
     "faker": "^4.1.0",
     "frisby": "^2.1.2",
+    "http-status-codes": "^2.1.4",
     "jest": "^26.4.1",
-    "mongodb": "^3.5.9",
+    "mongo": "^0.1.0",
+    "mongod": "^2.0.0",
+    "mongodb": "^3.7.3",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
